Fix formatting for Vanilla attribute modifiers added by CS
Took 3 minutes